--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.1",
     "next": "13.0.1",
+    "next-seo": "^5.13.0",
     "next-themes": "^0.2.1",
     "nodemailer": "^6.8.0",
     "react": "18.2.0",
