--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "typescript": "4.8.4"
   },
   "devDependencies": {
+    "@types/nodemailer": "^6.4.6",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.18",
     "tailwindcss": "^3.2.1"
